crated new branch for google-auth

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,6 @@
     <title>SSD Authentication Application</title>
 </head>
 <body>
-<h1>Hi</h1>
+<h1>Hi, this is google-auth branch</h1>
 </body>
 </html>
