git main details added

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 <h1>Hi</h1>
+<div class="sign_in">
+    <a class="btn btn-success fa fa-google" href="/facebook-login"> Sign in with Facebook</a>
+</div>
 </body>
 </html>
