--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Hi</h1>
 <div class="sign_in">
-    <a class="btn btn-success fa fa-google" href="/facebook-login"> Sign in with Facebook</a>
+    <a class="btn btn-success fa fa-google" href="/github-login"> Sign in with Facebook</a>
 </div>
 <h1>Hi, this is google-auth branch</h1>
 </body>
