--- a/src/main/resources/static/success.html
+++ b/src/main/resources/static/success.html
@@ -2,12 +2,43 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Success Page</title>
+    <title>Success</title>
+
+    <meta name="viewport" http-equiv="Content-Type" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+
+    <!---------------- Importing custom CSS ---------------->
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+
+    <!---------------- Bootstrap 4 CSS and JS CDN links ---------------->
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+
+    <!-- JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+            crossorigin="anonymous"></script>
 </head>
-<body>
-<H1>Successfully Created</H1>
-<div class="sign_in">
-    <a class="btn btn-success fa fa-google" href="/go-back">Go Back</a>
+<body class="main_container jumbotron text-center">
+<div class="big_container">
+    <div class="content_txt" style="background: snow;">
+        <img src="images/tick_logo.png"/>
+        <br/>
+        <h3>Successfully your repository created</h3>
+        <div class="sign_in">
+            <a class="btn btn-success fa fa-backward" href="/go-back">Back to Home</a>
+        </div>
+    </div>
 </div>
 </body>
 </html>
