--- a/src/main/resources/static/github.html
+++ b/src/main/resources/static/github.html
@@ -2,22 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>GitHub</title>
+    <title>GitHub Repo Creator</title>
+
+    <meta name="viewport" http-equiv="Content-Type" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+
+    <!---------------- Importing custom CSS ---------------->
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+
+    <!---------------- Bootstrap 4 CSS and JS CDN links ---------------->
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+
+    <!-- JavaScript -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+            integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+            integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+            integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+            crossorigin="anonymous"></script>
+
 </head>
-<body>
-<form id="create-repo" action="create-repo" method="post">
-<input type="text" name="reponame"/><br/>
+<body class="main_container jumbotron">
+<div class="big_container">
+    <div class="content_txt" style="background: snow;">
+        <form id="create-repo" action="create-repo" method="post">
+            <div class="form-group">
+                <label>Repository Name</label>
+                <input type="text" class="form-control" placeholder="Enter repository name" name="reponame"/>
+            </div>
 
-<input type="radio" name="status" value="private"/>Private<br/>
-<input type="radio" name="status" value="public"/>Public<br/>
+            <div class="form-group">
+                <label>Repository Type: </label>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="status" id="inlineRadio1" value="private">
+                    <label class="form-check-label" for="inlineRadio1">Private</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="status" id="inlineRadio2" value="public">
+                    <label class="form-check-label" for="inlineRadio2">Public</label>
+                </div>
+            </div>
 
-<textarea name="description"></textarea>
-
-    <button>Create Repo</button>
-
-</form>
-<!--<div class="sign_in">-->
-<!--    <a class="btn btn-success fa fa-google" href="/create-repo/reponame/status/description"> Create repository</a>-->
-<!--</div>-->
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Repository Description</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="description"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Create Repository</button>
+        </form>
+    </div>
+</div>
 </body>
 </html>
